--- a/website/templates/add_shop_items.html
+++ b/website/templates/add_shop_items.html
@@ -2,39 +2,41 @@
 
 {% block title %} Add Shop Items {% endblock %}
 
-
 {% block body %}
 
 <table class="table table-dark table-hover">
-    <thead>
-        <tr>
-            <th scope="col">Product Name</th>
-            <th scope="col">Previous Price</th>
-            <th scope="col">Current Price</th>
-            <th scope="col">In Stock</th>
-            <th scope="col">Picture</th>
-            <th scope="col">Flash Sale</th>
-            <th scope="col">Add</th>
-
-        </tr>
-    </thead>
-
-    <tbody> 
-        <tr>
-            <form action="" method="POST", enctype="multipart/form-data">
-                {{ form.hidden_tag() }}
-
-                <td>{{ form.product_name }}</td>
-                <td>{{ form.previous_price }}</td>
-                <td>{{ form.current_price }}</td>
-                <td>{{ form.in_stock }}</td>
-                <td>{{ form.product_picture() }}</td>
-                <td>{{ form.flash_sale }}</td>
-                <td>{{ form.add_product() }}</td>
-            </form>
-        </tr>
-    </tbody>
+ <thead>
+    <tr>
+        <th scope="col">Product Name</th>
+        <th scope="col">Previous Price</th>
+        <th scope="col">Current Price</th>
+        <th scope="col">In Stock</th>
+        <th scope="col">Category</th>
+        <th scope="col">Picture</th>
+        <th scope="col">Flash Sale</th>
+        <th scope="col">Add</th>
+    </tr>
+ </thead>
+ <tbody>
+    <tr>
+        <form action="" method="POST" enctype="multipart/form-data">
+            {{ form.hidden_tag() }}
+            <td><label for="product_name">{{ form.product_name.label }}</label>{{ form.product_name }}</td>
+            <td><label for="previous_price">{{ form.previous_price.label }}</label>{{ form.previous_price }}</td>
+            <td><label for="current_price">{{ form.current_price.label }}</label>{{ form.current_price }}</td>
+            <td><label for="in_stock">{{ form.in_stock.label }}</label>{{ form.in_stock }}</td>
+            <td><label for="category">{{ form.category_id.label }}</label>{{ form.category_id }}</td>
+            <td><label for="product_picture">{{ form.product_picture.label }}</label>{{ form.product_picture }}</td>
+            <td><label for="flash_sale">{{ form.flash_sale.label }}</label>{{ form.flash_sale }}</td>
+            <td>
+                <button type="submit" class="btn btn-success btn-sm shadow-sm px-4 py-2 rounded-pill">
+                  <i class="fas fa-plus-circle"></i> Add Product
+                </button>
+              </td>
+              
+        </form>
+    </tr>
+ </tbody>
 </table>
-
 
 {% endblock %}
