--- a/website/templates/shop_items.html
+++ b/website/templates/shop_items.html
@@ -40,9 +40,16 @@
 
 
                 <td>
-                    <a href="/update-item/{{ item.id }}">Update</a>
+                    <form action="{{ url_for('admin.update_item', item_id=item.id) }}" method="GET">
+                        <button type="submit" class="btn btn-primary">Update</button>
+                    </form>
+                    
                     <br>
-                    <a href="/delete-item/{{ item.id }}">Delete</a>
+                    <form action="{{ url_for('admin.delete_item', item_id=item.id) }}" method="POST">
+                        <button type="submit" class="btn btn-danger">Delete</button>
+                    </form>
+                    
+                    
                 </td>
 
             </tr>
